# Tartarus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  license_header.txt  main.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  docs.yaml  pypi-publish.yaml
app/api/v1/: __init__.py  config_definition.py
app/models/: config_definition.py
app/utils/config/: conf.py  queries.py
app/utils/config_definitions/: queries.py  utils.py  validations.py
app/utils/data/: data_source.py  datasource.py  queries.py
backend/: .pre-commit-config.yaml  main.py
backend/app/models/: common.py  config.py  config_definition.py
backend/tests/integration_tests/: test_config_definition.py  test_data_source.py
backend/tests/unit_tests/: test_data_source.py
devops/: Dockerfile  docker-compose.yaml
devops/tartarus-helm/: Chart.yaml  values.yaml
docs/: introduction.mdx  mint.json  quick-start.mdx
docs/additional-info/: cicd.mdx  database-design.mdx  error-handling.mdx  tech-stack.mdx
docs/api-reference/: authorization.mdx  config-definition.mdx  config.mdx  introduction.mdx  openapi.json
docs/deployment/: docker.mdx  introduction.mdx  kubernetes.mdx
docs/testing/: introduction.mdx  quickstart.mdx  testing-approach.mdx
tests/: test_main.py
tests/integration_tests/: test_config_definition.py  test_config_definitions.py  test_data_source.py  test_datasource.py
tests/unit_tests/: __init__.py  test_config_definition.py  test_config_definitions.py  test_data_source.py  test_datasource.py
(+56 files in other folders)
